# GCash_Reviews_Pipeline

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
dashboard/: app.py
gcash_reviews/: dbt_project.yml
gcash_reviews/models/marts/: _schema.yml  category_trends.sql  monthly_ratings.sql  sentiment_summary.sql  version_ratings.sql
gcash_reviews/models/staging/: dim_app_versions.sql  dim_dates.sql  fct_reviews.sql  schema.yml  sources.yml  stg_gcash_reviews.sql
ingestion/: incremental_scraper.py  scraper.py  watermark_seeder.py
kestra/flows/: 01_incremental_ingestion.yml  01_ingestion.yml  02_processing.yml  03_dbt.yml  04_full_pipeline.yml
notebooks/: eda_categorization.ipynb
processing/: categorizer.py  cleaner.py  pipeline.py
resources/diagrams/: gcash-reviews-pipeline.drawio
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfstate  terraform.tfvars  variables.tf
